<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/back_white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_login"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="none"
        android:id="@+id/username"
        android:layout_below="@id/welcome_login"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_below="@id/username"
        />


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/login"
        android:layout_centerInParent="true"
        android:id="@+id/login"
        android:onClick="loginUser"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape"
        />
    <TextView
        android:drawableLeft="@drawable/ic_live_help"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/forget_password"
        android:id="@+id/forget_password"
        android:gravity="center"
        android:textColor="@color/light_purple"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:drawableLeft="@drawable/ic_person_pin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/forget_password"
        android:layout_centerHorizontal="true"
        android:id="@+id/register"
        android:gravity="center"
        android:textColor="@color/deep_purple"
        />
    <Button
        android:id="@+id/button_dv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DV"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_com_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Debug"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button_dv" />


</RelativeLayout>